--- a/web-app/css/langSelector.css
+++ b/web-app/css/langSelector.css
@@ -1,15 +1,14 @@
-@CHARSET "ISO-8859-1";
-
-.lang_selector{
-	margin: 3px;
+.lang_selector {
+    margin: 3px;
 }
 
-.lang_flag{}
-
-.lang_link{
-	text-decoration: none;	
+.lang_flag {
 }
 
-.opacitiy_not_selected{
-	opacity: 0.5;
+.lang_link {
+    text-decoration: none;
+}
+
+.opacitiy_not_selected {
+    opacity: 0.5;
 }
